RESOLVED FIXED149540
FTLOSRExitCompiler incorrectly excludes FPR registers in callee saves loop
https://bugs.webkit.org/show_bug.cgi?id=149540
Summary FTLOSRExitCompiler incorrectly excludes FPR registers in callee saves loop
Saam Barati
Reported 2015-09-24 13:50:28 PDT
The first line in the loop "continue"s if "reg.isGPR()" is false. Later in the loop, we check "reg.isGPR()" and an else clause if it's false. This else clause is dead code. We need to decide if we don't need the else clause or if the check at the top of the loop is faulty.
Attachments
Patch (1.44 KB, patch)
2015-09-25 16:49 PDT, Michael Saboff
saam: review+
Michael Saboff
Comment 1 2015-09-25 16:49:44 PDT
Saam Barati
Comment 2 2015-09-25 16:50:43 PDT
Comment on attachment 261955 [details] Patch r=me
Michael Saboff
Comment 3 2015-09-25 16:53:00 PDT
Note You need to log in before you can comment on or make changes to this bug.