FTLOSRExitCompiler incorrectly excludes FPR registers in callee saves loop https://bugs.webkit.org/show_bug.cgi?id=149540

Reviewed by Saam Barati.

Eliminated the incorrect check that callee saves registers are only GPRs.

* ftl/FTLOSRExitCompiler.cpp:
(JSC::FTL::compileStub):


Canonical link: https://commits.webkit.org/167677@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190258 268f45cc-cd09-0410-ab3c-d52691b4dbfc